[gd_scene load_steps=12 format=3 uid="uid://dsr2f7nmm0vyo"]

[ext_resource type="Script" path="res://flames.gd" id="1_pfdv3"]
[ext_resource type="PackedScene" uid="uid://brx3xur8dmued" path="res://x.tscn" id="2_s2d3c"]
[ext_resource type="Texture2D" uid="uid://b7kx31jnqt7la" path="res://fired.png" id="3_3hkls"]

[sub_resource type="Gradient" id="Gradient_v3opv"]
offsets = PackedFloat32Array(0.00377357, 1)
colors = PackedColorArray(0.917647, 0.898039, 0.94902, 1, 0.917647, 0.898039, 0.94902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yan5f"]
gradient = SubResource("Gradient_v3opv")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkqvp"]
size = Vector2(18.9364, 20)

[sub_resource type="Curve2D" id="Curve2D_fqb4q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1179, -93, 0, 0, 0, 0, -77, 1302)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_d10hl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 112, -2, 0, 0, 0, 0, 105, 550, 0, 0, 0, 0, 1052, 553, 0, 0, 0, 0, 1062, 1328)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_otdg7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 440, -70, 0, 0, 0, 0, 1015, 1370)
}
point_count = 2

[sub_resource type="Gradient" id="Gradient_xs7gb"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_68uni"]
gradient = SubResource("Gradient_xs7gb")

[node name="flames" type="Node2D"]
script = ExtResource("1_pfdv3")

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 1220.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture1D_yan5f")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1556, 539)
rotation = -0.894197
scale = Vector2(4.57291, 12.8197)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80.3603, -1.86694)
shape = SubResource("RectangleShape2D_wkqvp")

[node name="Path2D1" type="Path2D" parent="."]
curve = SubResource("Curve2D_fqb4q")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_d10hl")

[node name="Path2D3" type="Path2D" parent="."]
curve = SubResource("Curve2D_otdg7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1020.0
offset_right = 1280.0
offset_bottom = 1244.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture1D_68uni")

[node name="X" parent="." node_paths=PackedStringArray("job") instance=ExtResource("2_s2d3c")]
position = Vector2(28, 30)
job = NodePath("..")

[node name="X2" parent="." node_paths=PackedStringArray("job") instance=ExtResource("2_s2d3c")]
position = Vector2(129, 30)
job = NodePath("..")
strike_num = 2

[node name="X3" parent="." node_paths=PackedStringArray("job") instance=ExtResource("2_s2d3c")]
position = Vector2(230, 30)
job = NodePath("..")
strike_num = 3

[node name="Panel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 1024)
offset_right = 1280.0
offset_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fired" type="Sprite2D" parent="Panel"]
position = Vector2(602, 510)
scale = Vector2(2.38073, 2.38073)
texture = ExtResource("3_3hkls")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_exit_auto_cook"]
